client/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

:root {
  --background-color: #ECEFF4;
  --background-color-2: #FFFFFF;
  --accent-color-1: #3B4252;
  --accent-color-2: #E1E1E1;
  --falling-color: #EB5757;
  --growing-color: #27AE60;
}

/* input[type=text] {
  font-size: 22px;
  width: 5em;
  border: none;
  border-bottom: 2px solid var(--accent-color-1);
  text-align: center;
} */
/* input[type=text]:focus {
  outline: none;
} */


::-webkit-scrollbar {
  width: 12px;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 2px grey;
  border-radius: 10px
}
 
/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--accent-color-1); 
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
}

body {
  height: 100vh;
  font-family: 'Roboto', sans-serif;
  margin: 0;
  background: var(--background-color-2);
  overflow-y: hidden;
}
.App {
  height: 100vh;
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  overflow: hidden;
}

.side-nav-bar {
  position: fixed;
  width: 300px;
  height: 100%;
  display: block;
}

.bottom-nav-bar {
  width: 100%;
  height: 100px;
  position: fixed;
  bottom: 0;
  border-radius: 20px 20px 0 0;
}

.title {
  text-decoration: none;
  /* color: var(--accent-color-1); */
  display: inline-block;
}

.title * {
  margin-bottom: 0;
  position: relative;
}

.group{
  font-size: 22px;
}

.group {
  height: 2em;
  position: relative;
  margin-left: 0.5em;
  /* color: var(--accent-color-1); */
}
.group-circle {
  height: 0.5em;
  width: 0.5em;
  /* background-color: var(--accent-color-1); */
  border-radius: 50%;
  display: inline-block;
  margin: 0;
  margin-right: 5px;
  bottom: 0.1em;
  position: relative;
}
.group-line {
  height: 0.6em;
  width: 3px;
  /* background-color: var(--accent-color-1); */
  margin: 0;
  position: absolute;
  left: calc(0.25em - 1.5px);
}
.group-line-top {
  top: 0;
}
.group-line-bottom {
  bottom: 0;
}
.group-middle {
  position: absolute;
  margin: 0;
  bottom: 0;
  line-height: 2em;
  width: 100%;
}
.group-title{
  position: absolute;
  margin-left: 1em;
  padding-left: 10px;
  width: calc(100% - 1.5em - 15px);
  height: 90%;
}
.selection {
  cursor: pointer;
}
.selection:not(.selected):hover {
  background-color: var(--background-color);
  border-radius: 8px;
}
.selection.selected {
  color: var(--background-color);
  background-color: var(--accent-color-1);
  border-radius: 8px;
  transition: background-color 200ms linear, color 200ms linear;
}
/* .new-group {
  font-size: 18px;
  height: 2em;
  line-height: 2em;
  background-color: var(--background-color);
  color: var(--accent-color-1);
  height: 2em;
  width: fit-content;
  padding: 0 0.5em 0 0.5em;
  margin-top: 1em;
  border-radius: 10px;
  height: 100%;
  width: 50%;
} */

.settings-content {
  margin: 0;
}
.settings{
  position: absolute;
  bottom: 10px;
  width: calc(100% - 20px);
  height: 2em;
  margin-bottom: 20px;
  padding-top: 10px;
  display: block;
}

.semi-circle {
  background: var(--background-color);
  width: 10px;
  height: 10px;
  position: absolute;
  right: 0;
  z-index: 1;
}
.top-semi-circle {
  top: -10px;
}
.bottom-semi-circle {
  bottom: -10px;
}

.indent {
  width: 100%;
  height: 100%;
  background: var(--accent-color-1);
  margin: 0;
}
.top-indent {
  border-radius: 0 0 8px 0;
}
.bottom-indent {
  border-radius: 0 8px 0 0;
}
.invisible {
  visibility: hidden;
}
.accent-color-2-background {
  background-color: #388e3d;
}
.collapse-side-nav-bar {
  position: fixed;
  /* color: var(--accent-color-1); */
  top: 2em;
  left: calc(280px - 3em);
}
.show-side-nav-bar {
  position: fixed;
  top: 10px;
  left: 10px;
}
.side-nav-bar-content {
  height: 100%;
  position: relative;
  padding: 0 30px 0 30px;
}

.home-button-title {
  padding-bottom: 10px;
}

button {
  text-decoration: none;
  background-color: transparent;
  border: none;
  cursor: pointer;
}

.big-icon {
  margin-right: 0.2em;
  transform: translateY(0.11em);
  font-size: 1em;
}

.groups-group {
  padding-top: 1em;
}

.group-line-double-top {
  top: -0.6em;
}

.title-text {
  text-decoration: none;
  display: inline;
  padding: 0 10px 0 10px;
}

/* Home */
.home {
  position: relative;
  width: 100%;
  height: 100%;
}
/* .groups {
  display: inline-block;
  position: absolute;
  height: calc(100% - 8em);
  width: 60%;
  overflow-y: auto;
  padding-right: 20px;
} */
.graphs {
  display: inline-block;
  position: absolute;
  height: calc(100% - 8em);
  width: 40%;
  right: 0;
}

.streak-value-completed {
  opacity: 1;
}

.streak-value-bar-left {
  left: 0;
}

.streak-value-bar-right {
  right: 0;
}

.streak-value-date {
  color: var(--accent-color-1);
  position: absolute;
  left: calc(50% - 1em);
  bottom: 0;
}

.card-title {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
}

.habit-box {
  margin-bottom: 10px;
}

.habit-text {
  font-size: 24px;
  display: inline-block;
  font-weight: bold;
  margin-right: 0.5em;
  max-width: 100%;
  overflow-wrap: break-word;
}

.habit-input-container, .habit-goal-container, .habit-goal-content {
  display: inline-block;
}

.habit-input-container {
  width: 70%;
}

.habit-goal-container {
  width: 30%;
}

.habit-goal-container, .habit-input-container {
  margin-bottom: 10px;
  font-size: 22px;
}


.habit-number-falling {
  color: var(--falling-color);
}

.habit-number-growing {
  color: var(--falling-color);
}

.new-tasks-container {
  display: flex;
  flex-wrap: wrap;
  margin-top: 1.5em;
  width: 100%;
}
.new-task {
  /* width: 100%; */
  width: fit-content;
  flex: 100%;
  margin-bottom: 1.5em;
}
.category-tracker {
  height: 1em;
}

.email-container {
  width: 80%;
  height: 2em;
  border: 1px solid;
}
.log-in-input {
  width: 300px;
  border-radius: 10px;
}

.text-button:hover {
  text-decoration:underline;
	display:inline-block;
}

